# VectoDB

./: Cargo.toml  README.md
crates/vectodb-metrics/: Cargo.toml
crates/vectodb-proto/: Cargo.toml
crates/vectodb-server/: Cargo.toml
examples/semantic_search/: Cargo.toml
src/: main.rs
